--- a/kview/README
+++ b/kview/README
@@ -1,6 +1,6 @@
 
-kview 0.10
-----------
+kview 0.11.0
+------------
 
 Yet another tentative release of kview, the KDE image viewer.
 
@@ -15,26 +15,22 @@ Do drop me a line if you get it running or not.  (taj@kde.org)
 HOW TO GET
 ----------
 
-Source:
+Available in the 'kdeapps' package. e.g.
+     ftp://ftp.kde.org/pub/kde/unstable/distribution/tgz
+     or any mirror of this site
 
-ftp://ftp.ph.unimelb.edu.au/incoming/taj/kde/ will have the latest version 
-of kview and the graphics libraries it requires.
 
-Screenshot of kview at:
-
-http://www.ph.unimelb.edu.au/~ssk/kde/screen.gif
 
 INSTALLATION
 ------------
 
-1. Edit the Makefile. Comment out any format declarations if you don't
-   have those libraries.
+1. Make sure that 
+   a) the environment variables QTDIR and KDEDIR are set
+   b) you have libjpeg, libgif, libpng --> kdesupport package
+2. ./configure
+3. make
+4  make install
 
-2. Make sure the environment variables QTDIR and KDEDIR are set
-
-3. make dep; make
-
-4. make install
 
 Libraries Required
 ------------------
@@ -47,10 +43,17 @@ Format: JPEG, PNG
 Library: libgr (built and tested with 2.0.9-2.0.11)
 Where: sunsite
 
+SINCE 0.10 (Martin Hartig)
+----------
+* a seperate window for selecting files
+* popup dialog for image window
+* mirror pic on x and y axis
+* new help page
+
 SINCE 0.9
 ---------
 
-Fixed resize and Makefile bugs
+* Fixed resize and Makefile bugs
 
 
 WHAT'S BEEN ADDED SINCE 0.7
@@ -68,6 +71,7 @@ WHAT'S BEEN ADDED SINCE 0.7
 * A poor excuse for a web page (spawns KDEHelp)
 * cleaned up the Makefile a bit
 
+
 How to add formats
 ------------------
 
@@ -81,11 +85,13 @@ How to add formats
 
 TODO
 ----
-
+planed for kview 0.12.0
+  * _one_ display manager for several images
+  * implement: image to Desktop->centered
+  * code clean up
+ 
 * PNG is getting there. Targa and tiff are a possibility.
 * Print
-* Some sort of toolbar? I dont know... it might just be a waste of
-  desktop real estate.
 * There are still bugs, of course.
 * Tentative... save support?
 
@@ -99,6 +105,8 @@ ACKNOWLEDGMENTS
 4. Lots and lots of people sent reports and suggestions. Thank you.
 
 ------------------------------------
-Sirtaj Kang, Sat March 15, 1996.
+Sirtaj Kang, Sat March 15, 1997.
 ssk@physics.unimelb.edu.au, taj@kde.org
 
+Martin Hartig, Fri Jul 4, 1997
+hartig@mathematik.uni-kl.de
