removed some example fax files and added a reference as to where to find them. -- Bernd

--- a/kfax/examples/README
+++ b/kfax/examples/README
@@ -1,3 +1,7 @@
+If you have the kdeapps distributions, please also read README.kdeapps
+thanks,
+Bernd
+
 This directory contains a number of fax files which you can use to
 test and play with KFax:
 
