--- a/kfax/README
+++ b/kfax/README
@@ -2,7 +2,7 @@
 I am please to release KFax 0.2, the first public release of 
 KFax - a fax file viewer for the KDE project.
 
-Please peruse the accompanying html documentation for moreinformation 
+Please peruse the accompanying html documentation for more information
 about KFax
 
 Help wanted: 
@@ -19,7 +19,7 @@ number and we will agree on which fax program I will used for reception.
 You can then send me a fax from your favorite program or machine, stating
 what machine/program you used, from where you sent the fax, what
 the size of the fax is, the number of pages you transmitted etc. 
-This would be very helpful. Thanks for your coorporations.
+This would be very helpful. Thanks for your coorporation.
 
 thanks,
 Bernd Wuebben
