--- a/kview/README
+++ b/kview/README
@@ -1,5 +1,5 @@
 
-kview 0.11.0
+kview 0.11.2
 ------------
 
 Yet another tentative release of kview, the KDE image viewer.
@@ -9,8 +9,6 @@ kview extends QImageIO with publicly available image-handler libraries.
 To be more honest with my kview development, I've been using kview instead
 of xv whenever possible; this gives me a first-hand impression of what it
 needs and what it lacks.
-
-Do drop me a line if you get it running or not.  (taj@kde.org)
 
 HOW TO GET
 ----------
@@ -24,41 +22,84 @@ Available in the 'kdeapps' package. e.g.
 INSTALLATION
 ------------
 
-1. Make sure that 
-   a) the environment variables QTDIR and KDEDIR are set
-   b) you have libjpeg, libgif, libpng --> kdesupport package
-2. ./configure
-3. make
-4  make install
+Follow the instructions for installing the kdeapps package, 
+that is
+           ./configure; make; make install
 
+Image Formats:
+--------------
 
-Libraries Required
+JPEG: (Taj)  
+- read support only
+
+GIF:  (Taj)
+- read support only
+- realized by giflib 2.3 (waiting for Qt 1.3)
+
+EPS:  (Dirk Schoenberg, schoenberger@signsoft.com)
+- read support only
+
+PCX, ILBM, TGA: (Dirk Schoenberg)
+- reading only
+
+XPM, XBM, BMP: provided by Qt 1.2
+- read and
+- write support
+
+How to add formats
 ------------------
 
-Format: GIF
-Library(version): giflib, compiled to shared lib.
-Where: http://www.ccil.org/~esr/home.html
+0. Tell me (Taj, Martin) you're working on the format to avoid duplicate work.
+1. Create an image handler conforming to QImageIO::defineIOHandler
+2. Add format header to formats.h
+3. Add format QImageIO definition in formats.cpp
+4. Add your source file and object file to the Makefile
+5. Send me your source file and header!
 
-Format: JPEG, PNG
+
+Libraries/Tools Required
+------------------------
+
+Format: JPEG,GIF
+Library(version): giflib, libjpeg 6a .
+Where: ->kdesupport package
+
+Format: PNG
 Library: libgr (built and tested with 2.0.9-2.0.11)
-Where: sunsite
+
+Format: PCX, ILBM, TGA
+Tool: the NetPBM conversion tools
+
+Format: EPS
+Tool: Ghostscript with PPM support
+
+
+
+CHANGES
+-------
+
+Since 0.11.0 (Martin Hartig)
+
+0.11.2:
+* new image filters by Dirk Schoenberg
+* minor fixes
+
+0.11.1: (not released) 
+* one display manager
+* embedded icons
+* reload button not neccessary any more
+* code cleanup (only a bit)
 
 SINCE 0.10 (Martin Hartig)
-----------
 * a seperate window for selecting files
 * popup dialog for image window
 * mirror pic on x and y axis
 * new help page
 
 SINCE 0.9
----------
-
 * Fixed resize and Makefile bugs
 
-
-WHAT'S BEEN ADDED SINCE 0.7
----------------------------
-
+SINCE 0.7
 * Some redesign of the UI
 * Multiple windows
 * URL support via KFM
@@ -72,41 +113,32 @@ WHAT'S BEEN ADDED SINCE 0.7
 * cleaned up the Makefile a bit
 
 
-How to add formats
-------------------
-
-0. Tell me you're working on the format to avoid duplicate work.
-1. Create an image handler conforming to QImageIO::defineIOHandler
-2. Add format header to formats.h
-3. Add format QImageIO definition in formats.cpp
-4. Add your source file and object file to the Makefile
-5. Send me your source file and header!
-
 
 TODO
 ----
 planed for kview 0.12.0
-  * _one_ display manager for several images
+  * _one_ display manager for several images (done)
   * implement: image to Desktop->centered
   * code clean up
  
-* PNG is getting there. Targa and tiff are a possibility.
+* PNG is getting there. Targa and tiff are a possibility. (done)
 * Print
 * There are still bugs, of course.
-* Tentative... save support?
+* Tentative... save support? 
 
 ACKNOWLEDGMENTS
 ---------------
 
 1. kview uses Warwick Allison's QwViewport widget.
 2. The DND and KFM stuff was first written by Torben Weis.
-3. The Troll Tech folks wrote Qt, without which we would have still been
+3. Dirk Schoenberg <schoenberger@signsoft.com> for writing image filters.
+4. The Troll Tech folks wrote Qt, without which we would have still been
    in the Dark Ages.
-4. Lots and lots of people sent reports and suggestions. Thank you.
+5. Lots and lots of people sent reports and suggestions. Thank you.
 
 ------------------------------------
 Sirtaj Kang, Sat March 15, 1997.
 ssk@physics.unimelb.edu.au, taj@kde.org
 
-Martin Hartig, Fri Jul 4, 1997
+Martin Hartig, Fri Jul 28, 1997
 hartig@mathematik.uni-kl.de
