Bernd -- Made kfax work with the new KToolBar etc.

--- a/kfax/ChangeLog
+++ b/kfax/ChangeLog
@@ -1,3 +1,7 @@
+Sun Aug  3 09:55:52 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
+
+	* Made kfax work with the new KToolBar etc.
+
 Thu Jul 24 20:44:33 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
 
 	* made the necessary changes so that kfax will compile with
