--- a/kfax/ChangeLog
+++ b/kfax/ChangeLog
@@ -1,3 +1,8 @@
+Sun Oct  5 22:17:09 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
+
+	* added support for printing all fax formats at all printer page
+	  sizes.
+
 Sun Aug  3 09:55:52 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
 
 	* Made kfax work with the new KToolBar etc.
