--- a/configure.in.1
+++ b/configure.in.1
@@ -62,6 +62,7 @@ dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h stdlib.h)
+AC_CHECK_FUNCS(usleep)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_TIME
