update by David Faure

--- a/po/fr/kpaint.po
+++ b/po/fr/kpaint.po
@@ -1,4 +1,3 @@
-
 #: app.cpp:27 app.cpp:44 kpaint.cpp:204
 msgid "Close Window"
 msgstr "Fermer"
@@ -13,15 +12,15 @@ msgstr "Ouvrir fichier"
 
 #: app.cpp:30 app.cpp:46 kpaint.cpp:158
 msgid "Save File"
-msgstr "Sauveguarder"
+msgstr "Sauver"
 
 #: app.cpp:31 app.cpp:47
 msgid "Save File As"
-msgstr "Sauveguarder en tant que"
+msgstr "Sauver sous"
 
 #: app.cpp:33 kpaint.cpp:227
 msgid "Pen"
-msgstr "Stilo"
+msgstr "Stylo"
 
 #: app.cpp:34 kpaint.cpp:228
 msgid "Line"
@@ -41,11 +40,11 @@ msgstr "Cercle"
 
 #: app.cpp:38 kpaint.cpp:232
 msgid "Spray Can"
-msgstr "Spray"
+msgstr "Bombe"
 
 #: app.cpp:59
 msgid "This was a QString"
-msgstr "Ceci etait un QSTring"
+msgstr "Ceci etait un QString"
 
 #: app.cpp:68
 msgid ""
@@ -65,11 +64,11 @@ msgstr " [url | fichier]\n"
 
 #: canvassize.cpp:11
 msgid "Width"
-msgstr "Largeure"
+msgstr "Largeur"
 
 #: canvassize.cpp:12
 msgid "Height"
-msgstr "Hauteure"
+msgstr "Hauteur"
 
 #: formatdialog.cpp:20
 msgid "File Format:"
@@ -81,19 +80,19 @@ msgstr "Nombre de couleurs:"
 
 #: infodialog.cpp:38
 msgid "Colours Used:"
-msgstr "Couleurs utilisée"
+msgstr "Couleurs utilisées"
 
 #: infodialog.cpp:65
 msgid "Image Width:"
-msgstr "Largeure de l'image"
+msgstr "Largeur de l'image"
 
 #: infodialog.cpp:81
 msgid "Image Height:"
-msgstr "Hauteure de l'image"
+msgstr "Hauteur de l'image"
 
 #: infodialog.cpp:93 palettedialog.cpp:13
 msgid "Dismiss"
-msgstr "Déblayer"
+msgstr "OK"
 
 #: kpaint.cpp:50 kpaint.cpp:520
 msgid "untitled.gif"
@@ -117,11 +116,11 @@ msgstr "Insérer"
 
 #: kpaint.cpp:168 kpaint.cpp:214
 msgid "Zoom In"
-msgstr "Agrandire"
+msgstr "Zoomer"
 
 #: kpaint.cpp:170 kpaint.cpp:215
 msgid "Zoom Out"
-msgstr "Rapetissire"
+msgstr "Dézoomer"
 
 #: kpaint.cpp:194
 msgid "New Image..."
@@ -133,11 +132,11 @@ msgstr "Ouvrir image..."
 
 #: kpaint.cpp:196
 msgid "Save Image..."
-msgstr "Sauveguarder l'image..."
+msgstr "Sauver l'image..."
 
 #: kpaint.cpp:197
 msgid "Save Image As..."
-msgstr "Sauvegarder l'image en tant que..."
+msgstr "Sauver l'image sous..."
 
 #: kpaint.cpp:198
 msgid "Image Format..."
@@ -145,11 +144,11 @@ msgstr "Format de l'image..."
 
 #: kpaint.cpp:200
 msgid "Open from URL..."
-msgstr "Ouvrir avec la URL..."
+msgstr "Ouvrir avec l'URL..."
 
 #: kpaint.cpp:201
 msgid "Save to URL..."
-msgstr "Sauveguarder a l'URL..."
+msgstr "Sauver à l'URL..."
 
 #: kpaint.cpp:209
 msgid "Copy Region"
@@ -157,15 +156,15 @@ msgstr "Copier la région"
 
 #: kpaint.cpp:210
 msgid "Cut Region"
-msgstr "Découper larégion"
+msgstr "Couper la région"
 
 #: kpaint.cpp:211
 msgid "Paste Region"
-msgstr "Insérer la region"
+msgstr "Coller la region"
 
 #: kpaint.cpp:212
 msgid "Paste As Image"
-msgstr "Insérer en tant qu'image"
+msgstr "Coller en tant qu'image"
 
 #: kpaint.cpp:216
 msgid "Mask..."
@@ -173,7 +172,7 @@ msgstr "Masque..."
 
 #: kpaint.cpp:217
 msgid "Options..."
-msgstr "Options"
+msgstr "Options..."
 
 #: kpaint.cpp:220
 msgid "Information..."
@@ -193,10 +192,10 @@ msgstr "Propriétés des outils..."
 
 #: kpaint.cpp:237
 msgid "Index"
-msgstr "Indexe"
+msgstr "Index"
 
 #: kpaint.cpp:238
-msgid "About KPaint"
+msgid "About..."
 msgstr "Au sujet de KPaint"
 
 #: kpaint.cpp:241
@@ -213,7 +212,7 @@ msgstr "&Image"
 
 #: kpaint.cpp:244
 msgid "&Tool"
-msgstr "Ou&Tils"
+msgstr "Ou&tils"
 
 #: kpaint.cpp:246
 msgid "&Help"
@@ -221,15 +220,15 @@ msgstr "&Aide"
 
 #: kpaint.cpp:281
 msgid "KPaint: Could not open file"
-msgstr "KPaint: ne pouvais pas ouvrir le fichier"
+msgstr "KPaint: impossible d'ouvrir le fichier"
 
 #: kpaint.cpp:282
 msgid ""
 "Error: Could not open file\n"
 "KPaint could not open the specified file."
 msgstr ""
-"Error: ne pouvais pas ouvrir le fichier\n"
-"KPaint ne pouvais pas ouvrir le fichier spécifié."
+"Error: impossible d'ouvrir le fichier\n"
+"Impossible d'ouvrir le fichier spécifié."
 
 
 #: kpaint.cpp:285 kpaint.cpp:295 kpaint.cpp:320 kpaint.cpp:337 kpaint.cpp:348
@@ -248,19 +247,19 @@ msgid ""
 "corrupt."
 msgstr ""
 "Error: Format inconnu\n"
-"KPaint ne pouvais pas reconnaitre le format du fichier spécifié."
+"KPaint n'a pas pu reconnaitre le format du fichier spécifié."
 
 #: kpaint.cpp:316 kpaint.cpp:433
 msgid "KPaint: Malformed URL"
-msgstr "KPaint: URL incorrècte"
+msgstr "KPaint: URL incorrecte"
 
 #: kpaint.cpp:317 kpaint.cpp:434
 msgid ""
 "Error: Malformed URL\n"
 "KPaint does not understand the specifed URL, check it's correct."
 msgstr ""
-"Error: URL incorrècte\n"
-"KPaint ne comprend pas la URL spécifiée, vérifiée la URL."
+"Error: URL incorrecte\n"
+"KPaint ne comprend pas l'URL spécifiée, vérifier l'URL."
 
 #: kpaint.cpp:334 kpaint.cpp:451
 msgid "Sorry"
@@ -271,33 +270,33 @@ msgid ""
 "KPaint is already accessing a remote file, you must\n"
 "cancel the current remote job or wait for it to complete."
 msgstr ""
-"KPaint accède déja à un fichier sur un autre système. Annulez l'execution\n"
+"KPaint accède déjà à un fichier sur un autre système. Annulez l'éxécution\n"
 "actuelle ou attendez que celle ci finisse."
 
 #: kpaint.cpp:346
 msgid "KPaint: Could not find KFM"
-msgstr "KPaint: ne pouvais pas trouver KFM"
+msgstr "KPaint: KFM introuvable"
 
 #: kpaint.cpp:347 kpaint.cpp:464
 msgid "Error: KPaint could not find a running KFM or start one itself."
-msgstr "Erreure: KPaint ne pouvais pas trouver de KFM ou en lancer un."
+msgstr "Erreure: KPaint n'a pas pu trouver KFM ou en lancer un."
 
 
 #: kpaint.cpp:402
 msgid "KPaint: Network Load Failed"
-msgstr "KPaint: Ne pouvais pas charger par réseau"
+msgstr "KPaint: Chargement par réseau impossible"
 
 #: kpaint.cpp:403
 msgid ""
 "Error: Netword Load Failed\n"
 "Something went wrong :-("
 msgstr ""
-"Erreure: Ne pouvais pas charger par réseau\n"
+"Erreur: Chargement par réseau impossible\n"
 "Quelque chose a raté :-("
 
 #: kpaint.cpp:463
 msgid "KPaint: Could not start KFM"
-msgstr "KPaint: ne pouvais pas lancer KFM"
+msgstr "KPaint: impossible de lancer KFM"
 
 #: kpaint.cpp:492
 msgid "Canvas Size"
@@ -309,7 +308,7 @@ msgstr "Ouvrir URL:"
 
 #: kpaint.cpp:716
 msgid "Save to Location:"
-msgstr "Sauveguarder à la URL:"
+msgstr "Sauver à l'URL:"
 
 #: manager.cpp:60
 msgid "Tool Properties"
@@ -317,7 +316,7 @@ msgstr "Propriétés des outils"
 
 #: palette.cpp:101
 msgid "Edit Colour"
-msgstr "Éditer les couleurs"
+msgstr "Editer les couleurs"
 
 #: properties.cpp:19
 msgid "Line Properties"
@@ -325,11 +324,11 @@ msgstr "Propriétés des lignes"
 
 #: properties.cpp:21
 msgid "Fill Properties"
-msgstr "Propriétés de Remplire"
+msgstr "Propriétés de Remplissage"
 
 #: properties.cpp:67
 msgid "Fill Pattern:"
-msgstr "Schema pour Remplir:"
+msgstr "Motif de Remplissage:"
 
 #: properties.cpp:73 properties.cpp:239
 msgid "None"
@@ -337,11 +336,11 @@ msgstr "Vide"
 
 #: properties.cpp:74 properties.cpp:234
 msgid "Solid"
-msgstr "Solide"
+msgstr "Plein"
 
 #: properties.cpp:75
 msgid "Vertical Lines"
-msgstr "Ligne verticale"
+msgstr "Lignes verticales"
 
 #: properties.cpp:76
 msgid "Horizontal Lines"
@@ -365,7 +364,7 @@ msgstr "Grille diagonale"
 
 #: properties.cpp:90
 msgid "Custom"
-msgstr "définie"
+msgstr "Personnalisé"
 
 #: properties.cpp:93
 msgid "Pattern Filename:"
@@ -377,7 +376,7 @@ msgstr "Parcourir..."
 
 #: properties.cpp:103
 msgid "Set Fill Colour..."
-msgstr "Définier la couleur de remplissage"
+msgstr "Définir la couleur de remplissage"
 
 #: properties.cpp:229
 msgid "Line Style:"
@@ -401,7 +400,7 @@ msgstr "Tiret Point Point"
 
 #: properties.cpp:243
 msgid "Line Width:"
-msgstr "Largeure des lignes:"
+msgstr "Largeur des lignes:"
 
 #: properties.cpp:253
 msgid "End style:"
@@ -417,5 +416,5 @@ msgstr "Join style:"
 
 #: properties.cpp:277
 msgid "Set Line Colour..."
-msgstr "Définir la couleure des lignes..."
+msgstr "Définir la couleur des lignes..."
 
