--- a/po/de/kpaint.po
+++ b/po/de/kpaint.po
@@ -1,17 +1,9 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: kpaint\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Last-Translator: Kalle Dalheimer <kall@kde.org>\n"
 
 #: app.cpp:27 app.cpp:44 kpaint.cpp:204
 msgid "Close Window"
@@ -434,20 +426,3 @@ msgstr "Verbindungsstil"
 msgid "Set Line Colour..."
 msgstr "Linienfarbe setzen"
 
-#~ msgid "Quit"
-#~ msgstr "Beenden"
-
-#~ msgid "Help"
-#~ msgstr "Hilfe"
-
-#~ msgid "Ok"
-#~ msgstr "Ok"
-
-#~ msgid "Cancel"
-#~ msgstr "Abbrechen"
-
-#~ msgid "Contents"
-#~ msgstr "Inhalt"
-
-#~ msgid "About"
-#~ msgstr "Über"
